v0.3.0/_sources/index.rst.txt
.. _index:

==============
hklpy2-solvers
==============

**hklpy2-solvers** provides solvers that plug into the
`hklpy2 <https://blueskyproject.io/hklpy2/>`_ diffractometer control
framework via its entry-point interface.

.. toctree::
   :hidden:

   guides
   api
   release_notes

.. grid:: 2

   .. grid-item-card:: :ref:`install`

      Installation instructions.

   .. grid-item-card:: :ref:`usage`

      How to use with hklpy2: load solver, set lattice, add reflections,
      calculate UB, forward and inverse calculations.

   .. grid-item-card:: :ref:`guide_ad_hoc`

      Guide: create diffractometers with the ``ad_hoc`` solver
      (10 geometries).

   .. grid-item-card:: :ref:`guide_diffcalc`

      Guide: orient a sample and compute positions with the ``diffcalc``
      solver.

   .. grid-item-card:: :ref:`geometries`

      Supported solver geometries and operating modes.

   .. grid-item-card:: :ref:`howto_benchmark`

      How to benchmark a solver geometry's forward/inverse throughput.

   .. grid-item-card:: API Reference

      `API Reference <api/hklpy2_solvers/index.html>`_

   .. grid-item-card:: :ref:`release_notes`

      Release history and changelog.

About
-----

.. list-table::
   :stub-columns: 1

   * - Homepage
     - https://github.com/prjemian/hklpy2_solvers
   * - Source
     - https://github.com/prjemian/hklpy2_solvers
   * - License
     - `LicenseRef-UChicago-Argonne-LLC-License <https://github.com/prjemian/hklpy2_solvers/blob/main/LICENSE>`_
   * - Version
     - |release|
